--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@next/third-parties": "^15.3.0",
     "csv-parser": "^3.2.0",
     "leaflet": "^1.9.4",
     "next": "^15.3.0",
